example/secondfile/objects/DHStatus_Rate_Plan__c.object
<CustomObject>
    <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Billing Update Details-DHStatus-Contract Details-DHStatus-Rate Plan</description>
    <fields>
        <fullName>DHStatus_Contract_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Billing Update Details-DHStatus-Contract Details-DHStatus-Rate Plan-DHStatus-Contract Details</description>
        <label>DHStatus-Contract Details</label>
        <referenceTo>DHStatus_Contract_Details__c</referenceTo>
        <relationshipLabel>DHStatus-Rate Plan</relationshipLabel>
        <relationshipName>DHStatus_Rate_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate_Plan_ID__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Billing Update Details-DHStatus-Contract Details-DHStatus-Rate Plan-Rate Plan ID</description>
        <label>Rate Plan ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Plan_Start_Date__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Billing Update Details-DHStatus-Contract Details-DHStatus-Rate Plan-Rate Plan Start Date</description>
        <label>Rate Plan Start Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Stability_Date__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Billing Update Details-DHStatus-Contract Details-DHStatus-Rate Plan-Rate Stability Date</description>
        <label>Rate Stability Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-Rate Plan</label>
    <nameField>
        <displayFormat>DRP-{0000}</displayFormat>
        <label>DHStatus-Rate Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-Rate Plan</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>